# OpenRobotics

./: .env  .gitignore  README.md  __init__.py  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: index.rst
examples/: hardware_adapters_example.py  mlx_integration_examples.py  mlx_robot_control_example.py  physical_robot_example.py  robot_simulation_example.py
openrobotics/: __init__.py  cli.py  config.py
openrobotics.egg-info/: SOURCES.txt  requires.txt
openrobotics/api/: __init__.py  client.py  server.py
openrobotics/data_storage/: __init__.py  database.py
openrobotics/langchain_integration/: __init__.py  agents.py  chains.py  prompts.py
openrobotics/llm_commands/: local_models.py
openrobotics/mlx_integration/: __init__.py  benchmark.py  models.py  optimization.py  tensors.py  training.py  utils.py
openrobotics/robot_control/: __init__.py  robot.py  simulation.py  vision.py
openrobotics/robot_control/hardware/: __init__.py  arduino_adapter.py  base.py  esp32_adapter.py  factory.py  raspberry_pi.py  ros_adapter.py  serial_adapter.py
openrobotics/visualization/: dashboard.py
tests/: test_mlx_integration.py  test_mlx_utils.py
